--- a/src/components/Pession/pession.scss
+++ b/src/components/Pession/pession.scss
@@ -92,5 +92,15 @@
         }
       }
     }
+    @media (max-width: 768px){
+      flex-direction: column;
+      &_lefts{
+        width: 100%;
+        .col-2{
+          width: 35%;
+          border:1px solid red;
+        }
+      }
+    }
   }
 }
