--- a/src/components/Partner/partner.scss
+++ b/src/components/Partner/partner.scss
@@ -30,17 +30,18 @@ padding: 14px 0 10px;
         display: block;
         margin-top: 15px;
         .swiper-slide {
+            width: 150px !important;
           text-align: center;
           height: 80px;
           .imgH {
-            width: 100px;
-            height: 50px;
+            width: 150px;
+            height: 60px;
             display: flex;
             padding: 10px;
             background: white;
           }
           img {
-            width: 100px;
+            width: 150px !important;
 
             height: auto;
             object-fit: contain;
@@ -53,6 +54,18 @@ padding: 14px 0 10px;
           }
         }
       }
+    }
+  }
+}
+@media (max-width: 1190px){
+  .rows{
+    flex-direction: column;
+    .brand-one_inner-partner_col-9{
+      width: 100%;
+    }
+    .brand-one_inner-partner_col-3{
+      display: flex;
+      margin: 0 auto;
     }
   }
 }
