--- a/src/components/newLetter/style.scss
+++ b/src/components/newLetter/style.scss
@@ -160,3 +160,12 @@
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
+@media (max-width: 1190px){
+  .newLetter__inners {
+    flex-direction: column;
+  }
+  .newLetter__inners_lefts_title-new{
+    margin-bottom: 30px;
+    font-size: 35px;
+  }
+}
