--- a/src/pages/Gallery/gallery.scss
+++ b/src/pages/Gallery/gallery.scss
@@ -7,8 +7,8 @@
     .rows {
       display: flex;
       flex-wrap: wrap;
-     
-      gap: 23px;
+
+      gap: 20px;
       padding-bottom: 50px;
     }
 
@@ -28,8 +28,8 @@
 
           img {
             width: 100%;
-            height: 600px;
-          
+            height: 500px;
+
             display: block;
             border-radius: 10px;
             transition: transform 0.4s ease;
@@ -111,4 +111,62 @@
       }
     }
   }
+  @media (max-width: 1190px) {
+    .similar-project {
+      .rows {
+        gap: 0;
+        justify-content: space-between;
+      }
+      .col-xl-4 {
+        width: 48%;
+        margin-bottom: 30px;
+        .col-xl-4__single {
+          .col-xl-4__imgs {
+            img {
+              height: 400px;
+            }
+          }
+        }
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .similar-project {
+      .rows {
+        gap: 0;
+        justify-content: space-between;
+      }
+      .col-xl-4 {
+        width: 48%;
+        margin-bottom: 30px;
+        .col-xl-4__single {
+          .col-xl-4__imgs {
+            img {
+              height: 400px;
+            }
+          }
+        }
+      }
+    }
+  }
+  
+  @media (max-width: 576px) {
+    .similar-project {
+      .rows {
+       flex-direction: column;
+      }
+      .col-xl-4 {
+        width: 100%;
+        margin-bottom: 30px;
+        .col-xl-4__single {
+          .col-xl-4__imgs {
+            img {
+              height: 450px;
+            }
+          }
+        }
+      }
+    }
+  }
+  
 }
