--- a/src/components/HomeServies/homeServies.scss
+++ b/src/components/HomeServies/homeServies.scss
@@ -94,7 +94,7 @@
           left: 0;
           width: 100%;
           height: 100%;
-          background: #9cbf30; /* You can adjust the color */
+          background: #d25717; /* You can adjust the color */
           transition: transform 0.5s, opacity 0.5s;
           transform: scale(0); /* Start from scale 0 */
           z-index: 0;
