--- a/src/components/Partner/partner.scss
+++ b/src/components/Partner/partner.scss
@@ -42,6 +42,7 @@ padding: 14px 0 10px;
           }
           img {
             width: 150px !important;
+            height: 60px !important;
 
             height: auto;
             object-fit: contain;
