--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -11,7 +11,7 @@
   .sliderWrapper {
     width: 100%;
     height: 83.5vh;
-    background: linear-gradient(to right, #fff 50%, #f0e3cc 50%);
+    background: linear-gradient(to right, #fff 50%,  #d25717 50%);
     position: relative;
 
     .mySwiper {
